refactor: 생성자에 방어적 복사 적용